--- a/preon/examples/drug_name_normalization.ipynb
+++ b/preon/examples/drug_name_normalization.ipynb
@@ -11,9 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 96,
    "id": "pregnant-price",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:34:15.459870Z",
+     "start_time": "2023-12-11T15:34:15.399644Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import sys\n",
@@ -22,11 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 97,
    "id": "cordless-retro",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:34:15.461878Z",
+     "start_time": "2023-12-11T15:34:15.403235Z"
+    }
+   },
    "outputs": [],
    "source": [
+    "import logging\n",
     "from preon.normalization import PrecisionOncologyNormalizer\n",
     "from preon.drug import load_ebi_drugs, load_charite_drug_goldstandard, load_database_drug_goldstandard, load_ctg_drug_goldstandard\n",
     "from preon.tests.utils import f1_score"
@@ -34,9 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 98,
    "id": "technological-isaac",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:34:15.461941Z",
+     "start_time": "2023-12-11T15:34:15.406950Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -53,9 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 99,
    "id": "bright-found",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:34:19.896804Z",
+     "start_time": "2023-12-11T15:34:15.409663Z"
+    }
+   },
    "outputs": [],
    "source": [
     "drug_names, chembl_ids = load_ebi_drugs()\n",
@@ -72,9 +93,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 100,
    "id": "parental-jacket",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:34:19.902258Z",
+     "start_time": "2023-12-11T15:34:19.897769Z"
+    }
+   },
    "outputs": [],
    "source": [
     "goldstandards = [\n",
@@ -86,9 +112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 101,
    "id": "ruled-roads",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:34:30.965658Z",
+     "start_time": "2023-12-11T15:34:19.900482Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -118,15 +149,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 102,
+   "outputs": [],
+   "source": [
+    "# print warnings (default)\n",
+    "logging.captureWarnings(False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:34:30.965800Z",
+     "start_time": "2023-12-11T15:34:30.962543Z"
+    }
+   },
+   "id": "cde174d87ed0298c"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "outputs": [],
+   "source": [
+    "drug_names, chembl_ids = load_ebi_drugs()\n",
+    "normalizer = PrecisionOncologyNormalizer().fit(drug_names, chembl_ids)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:34:35.044691Z",
+     "start_time": "2023-12-11T15:34:30.965168Z"
+    }
+   },
+   "id": "9a02729712a55d1c"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
    "id": "tutorial-bibliography",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:34:35.049748Z",
+     "start_time": "2023-12-11T15:34:35.045608Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": "(['avastin'], [['CHEMBL1201583']], {'match_type': 'exact'})"
      },
-     "execution_count": 7,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,15 +215,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 105,
    "id": "civilian-coating",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:34:35.051179Z",
+     "start_time": "2023-12-11T15:34:35.048608Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": "(['ixabepilone'], [['CHEMBL1201752']], {'match_type': 'substring'})"
      },
-     "execution_count": 8,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,15 +247,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 106,
    "id": "expensive-nepal",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:34:35.247586Z",
+     "start_time": "2023-12-11T15:34:35.057027Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": "(['isavuconazonium'],\n [['CHEMBL1183349']],\n {'match_type': 'partial', 'edit_distance': 0.067})"
      },
-     "execution_count": 9,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,19 +278,119 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 107,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ermshaua/Documents/Git/public/preon/preon/normalization.py:50: UserWarning: Cannot match risolipase en. to reference data. Try changing the partial matching threshold or number of n-grams.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "normalizer.query(\"risolipase en.\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:34:35.397891Z",
+     "start_time": "2023-12-11T15:34:35.284677Z"
+    }
+   },
+   "id": "f2efb87891c08847"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "If preon cannot find a match, it warns the user and suggests hyper-parameter changes. In this case, we increase the partial matching threshold to 30% and get a valid result."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "845c2546a64d911f"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(['rizolipase'],\n [['CHEMBL2108124']],\n {'match_type': 'partial', 'edit_distance': 0.25})"
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalizer.query(\"risolipase en.\", threshold=.3)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:34:35.575162Z",
+     "start_time": "2023-12-11T15:34:35.470123Z"
+    }
+   },
+   "id": "ef7c2dc76a65c3e7"
+  },
+  {
    "cell_type": "markdown",
    "id": "recorded-stephen",
    "metadata": {},
    "source": [
     "# Data Integration\n",
-    "We use preon in the PREDICT project to integrate drug names from different sources. Going on, we provide an overview how to do so."
+    "We use preon in the PREDICT project to integrate drug names from different sources. Going on, we provide an overview how to do so. For this example, we write issued warnings to a log file for inspection."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 109,
+   "outputs": [],
+   "source": [
+    "# store warnings in file\n",
+    "logging.basicConfig(filename='warnings.log', level=logging.WARNING)\n",
+    "logging.captureWarnings(True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:34:35.575365Z",
+     "start_time": "2023-12-11T15:34:35.572642Z"
+    }
+   },
+   "id": "94b14fbdaabfccdf"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "outputs": [],
+   "source": [
+    "drug_names, chembl_ids = load_ebi_drugs()\n",
+    "normalizer = PrecisionOncologyNormalizer().fit(drug_names, chembl_ids)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:34:39.596121Z",
+     "start_time": "2023-12-11T15:34:35.575283Z"
+    }
+   },
+   "id": "be3ebb34def3024"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
    "id": "former-granny",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:34:39.601794Z",
+     "start_time": "2023-12-11T15:34:39.597371Z"
+    }
+   },
    "outputs": [],
    "source": [
     "db_names, _, _ = load_database_drug_goldstandard()\n",
@@ -227,16 +407,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 112,
    "id": "paperback-forwarding",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:34:41.045441Z",
+     "start_time": "2023-12-11T15:34:39.615040Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "                    Name     Found Names     Found Name IDs Match Type  \\\n0               LOXO-292       [loxo292]  [[CHEMBL4559134]]      exact   \n1               H3B-8800       [h3b8800]  [[CHEMBL4802174]]      exact   \n2               Tubulins              []           [[None]]       none   \n3   Androgen Deprivation              []           [[None]]       none   \n4              Mitomycin     [mitomycin]      [[CHEMBL105]]      exact   \n..                   ...             ...                ...        ...   \n71           Thioguanine   [thioguanine]      [[CHEMBL727]]      exact   \n72          Lenalidomide  [lenalidomide]      [[CHEMBL848]]      exact   \n73           Gemcitabine   [gemcitabine]      [[CHEMBL888]]      exact   \n74             Gefitinib     [gefitinib]      [[CHEMBL939]]      exact   \n75              Imatinib      [imatinib]      [[CHEMBL941]]      exact   \n\n    Edit Distance  Query Time  \n0             NaN    0.000129  \n1             NaN    0.000086  \n2             NaN    0.355895  \n3             NaN    0.614503  \n4             NaN    0.000092  \n..            ...         ...  \n71            NaN    0.000036  \n72            NaN    0.000038  \n73            NaN    0.000038  \n74            NaN    0.000036  \n75            NaN    0.000038  \n\n[76 rows x 6 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Name</th>\n      <th>Found Names</th>\n      <th>Found Name IDs</th>\n      <th>Match Type</th>\n      <th>Edit Distance</th>\n      <th>Query Time</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>LOXO-292</td>\n      <td>[loxo292]</td>\n      <td>[[CHEMBL4559134]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000129</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>H3B-8800</td>\n      <td>[h3b8800]</td>\n      <td>[[CHEMBL4802174]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000086</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Tubulins</td>\n      <td>[]</td>\n      <td>[[None]]</td>\n      <td>none</td>\n      <td>NaN</td>\n      <td>0.355895</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Androgen Deprivation</td>\n      <td>[]</td>\n      <td>[[None]]</td>\n      <td>none</td>\n      <td>NaN</td>\n      <td>0.614503</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Mitomycin</td>\n      <td>[mitomycin]</td>\n      <td>[[CHEMBL105]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000092</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>71</th>\n      <td>Thioguanine</td>\n      <td>[thioguanine]</td>\n      <td>[[CHEMBL727]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000036</td>\n    </tr>\n    <tr>\n      <th>72</th>\n      <td>Lenalidomide</td>\n      <td>[lenalidomide]</td>\n      <td>[[CHEMBL848]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000038</td>\n    </tr>\n    <tr>\n      <th>73</th>\n      <td>Gemcitabine</td>\n      <td>[gemcitabine]</td>\n      <td>[[CHEMBL888]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000038</td>\n    </tr>\n    <tr>\n      <th>74</th>\n      <td>Gefitinib</td>\n      <td>[gefitinib]</td>\n      <td>[[CHEMBL939]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000036</td>\n    </tr>\n    <tr>\n      <th>75</th>\n      <td>Imatinib</td>\n      <td>[imatinib]</td>\n      <td>[[CHEMBL941]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000038</td>\n    </tr>\n  </tbody>\n</table>\n<p>76 rows × 6 columns</p>\n</div>"
+      "text/plain": "                    Name     Found Names     Found Name IDs Match Type  \\\n0               LOXO-292       [loxo292]  [[CHEMBL4559134]]      exact   \n1               H3B-8800       [h3b8800]  [[CHEMBL4802174]]      exact   \n2               Tubulins              []           [[None]]       none   \n3   Androgen Deprivation              []           [[None]]       none   \n4              Mitomycin     [mitomycin]      [[CHEMBL105]]      exact   \n..                   ...             ...                ...        ...   \n71           Thioguanine   [thioguanine]      [[CHEMBL727]]      exact   \n72          Lenalidomide  [lenalidomide]      [[CHEMBL848]]      exact   \n73           Gemcitabine   [gemcitabine]      [[CHEMBL888]]      exact   \n74             Gefitinib     [gefitinib]      [[CHEMBL939]]      exact   \n75              Imatinib      [imatinib]      [[CHEMBL941]]      exact   \n\n    Edit Distance  Query Time  \n0             NaN    0.000044  \n1             NaN    0.000026  \n2             NaN    0.109484  \n3             NaN    0.199025  \n4             NaN    0.000047  \n..            ...         ...  \n71            NaN    0.000007  \n72            NaN    0.000008  \n73            NaN    0.000008  \n74            NaN    0.000008  \n75            NaN    0.000008  \n\n[76 rows x 6 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Name</th>\n      <th>Found Names</th>\n      <th>Found Name IDs</th>\n      <th>Match Type</th>\n      <th>Edit Distance</th>\n      <th>Query Time</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>LOXO-292</td>\n      <td>[loxo292]</td>\n      <td>[[CHEMBL4559134]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000044</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>H3B-8800</td>\n      <td>[h3b8800]</td>\n      <td>[[CHEMBL4802174]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000026</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Tubulins</td>\n      <td>[]</td>\n      <td>[[None]]</td>\n      <td>none</td>\n      <td>NaN</td>\n      <td>0.109484</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Androgen Deprivation</td>\n      <td>[]</td>\n      <td>[[None]]</td>\n      <td>none</td>\n      <td>NaN</td>\n      <td>0.199025</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Mitomycin</td>\n      <td>[mitomycin]</td>\n      <td>[[CHEMBL105]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000047</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>71</th>\n      <td>Thioguanine</td>\n      <td>[thioguanine]</td>\n      <td>[[CHEMBL727]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000007</td>\n    </tr>\n    <tr>\n      <th>72</th>\n      <td>Lenalidomide</td>\n      <td>[lenalidomide]</td>\n      <td>[[CHEMBL848]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000008</td>\n    </tr>\n    <tr>\n      <th>73</th>\n      <td>Gemcitabine</td>\n      <td>[gemcitabine]</td>\n      <td>[[CHEMBL888]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000008</td>\n    </tr>\n    <tr>\n      <th>74</th>\n      <td>Gefitinib</td>\n      <td>[gefitinib]</td>\n      <td>[[CHEMBL939]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000008</td>\n    </tr>\n    <tr>\n      <th>75</th>\n      <td>Imatinib</td>\n      <td>[imatinib]</td>\n      <td>[[CHEMBL941]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000008</td>\n    </tr>\n  </tbody>\n</table>\n<p>76 rows × 6 columns</p>\n</div>"
      },
-     "execution_count": 11,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,9 +440,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 113,
    "id": "scheduled-accused",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:34:44.992757Z",
+     "start_time": "2023-12-11T15:34:41.121032Z"
+    }
+   },
    "outputs": [],
    "source": [
     "db_df = normalizer.transform(db_names)\n",
@@ -277,9 +467,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 114,
    "id": "sixth-clear",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:34:45.011491Z",
+     "start_time": "2023-12-11T15:34:45.008135Z"
+    }
+   },
    "outputs": [],
    "source": [
     "db_names, db_ids = db_df.Name.tolist(), db_df[\"Found Name IDs\"].tolist()\n",
